# agent-brain-pipeline

./: .dockerignore  .gitignore  Dockerfile.hermes-lite  Dockerfile.pipeline  LICENSE  MANIFEST.sha256  Makefile  README.md  compose.lightweight.yaml  compose.yaml  pyproject.toml
agent-brain-pipeline/: FILE_TREE.txt  README.md  pyproject.toml
agent-brain-pipeline/config/: runtime.yaml
agent-brain-pipeline/pipeline/: db.py  urls.py  util.py
agent-brain-pipeline/scripts/: bootstrap.sh  doctor.sh  render_runtime.py
agent-brain-pipeline/tests/: test_semantics.py  test_urls.py
config/: runtime.example.yaml
docker/: hermes-lite-entrypoint.sh
docs/: ARCHITECTURE.md  CONFIGURATION.md
pipeline/: api.py  config.py  db.py  runner.py  search.py  util.py
pipeline/analyzers/: tree_sitter.py
pipeline/embeddings/: __init__.py  base.py  local.py
pipeline/indexes/: __init__.py  lancedb_index.py
pipeline/schemas/: __init__.py  base.py  file.py  graph.py  ids.py  report.py  retrieval.py  source.py  symbol.py  tool_execution.py  unit.py
pipeline/stages/: _audit.py  _normalize.py  _semantics.py  _structure.py  acquire.py  audit.py  curate.py  export.py  integrity.py  lint.py  normalize.py  retrieval.py  (+4 more)
scripts/: bootstrap-lightweight.sh  codefetch  doctor.sh  render_runtime.py  verify-container-isolation.sh
tests/: test_audit_gate.py  test_canonical_schema.py  test_export_stage.py  test_knowledge_writer.py  test_render_runtime.py  test_runner.py  test_semantics_stage.py  test_stage_split.py  test_structure_stage.py  test_syntax_stage.py  test_vector_stage.py
(+57 files in other folders)
